<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppEmpresarial</string>
    <string name="app_titulo">Ruta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ingresar">Ingresar</string>
    <string name="txt_usuario_login">Usuario:</string>
    <string name="txt_contrasena_login">Contraseña:</string>
    <string name="txt_btn_login">Ingresar</string>
    <string name="txt_home_clientes_listado">Lista de Clientes</string>
    <string name="txt_clientes_agregar">Agregar Clientes</string>
    <string name="title_activity_clientes_agregar">ClientesAgregarActivity</string>
    <string name="txt_cliente_agregar_titulo">Agregar Cliente</string>
    <string name="txt_cliente_agregar_Nombre">Nombre:</string>
    <string name="txt_cliente_agregar_Apellido">Apellido:</string>
    <string name="txt_cliente_Agregar_Direccion">Direccion:</string>
    <string name="txt_cliente_agregar_Telefono">Telefono:</string>
    <string name="txt_cliente_agregar_btn">Agregar Cliente</string>
    <string name="title_activity_clientes_editar">ClientesEditarActivity</string>
    <string name="txt_clientes_mod_titulo">Modificar o Borrar</string>
    <string name="txt_clientes_mod_btn_Modificar">Modificar</string>
    <string name="txt_clientes_mod_btn_Borrar">Borrar</string>
    <string name="txt_pedidos_titulo">Pedidos</string>
    <string name="txt_pedido_cliente">Cliente:</string>
    <string name="txt_pedido_producto">Producto:</string>
    <string name="txt_pedido_cantidad">Cantidad:</string>
    <string name="txt_pedido_precio">Precio:</string>
    <string name="txt_pedido_fecha">Fecha:</string>
    <string name="txt_pedido_btn_registrar">Guardar Pedido</string>
    <string name="txt_home_titulo">Bienvenido</string>
    <string name="txt_home_ruta">Ruta de visita</string>

</resources>
