<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.pipec.abmproductos.PedidosActivity" >

    <TextView
        android:id="@+id/textos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_pedidos_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textos"
        android:text="@string/txt_pedido_cliente"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/spi_usuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:background="#000000"
        android:spinnerMode="dropdown"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tx_addApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spi_usuarios"
        android:text="@string/txt_pedido_producto"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/spi_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tx_addApellido"
        android:background="#000000"
        android:spinnerMode="dropdown"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txt_cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/spi_producto"
        android:layout_below="@+id/textView4"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:ems="10"
        android:inputType="number"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <EditText
        android:id="@+id/txt_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/txt_cantidad"
        android:layout_below="@+id/textView5"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:ems="10"
        android:inputType="date"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/txt_fecha"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:ems="10"
        android:inputType="number"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tx_addApellido"
        android:layout_below="@+id/spi_producto"
        android:text="@string/txt_pedido_cantidad"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_precio"
        android:background="@color/btn_logut_bg"
        android:text="@string/txt_pedido_btn_registrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_cantidad"
        android:layout_below="@+id/txt_cantidad"
        android:text="@string/txt_pedido_fecha"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_fecha"
        android:layout_below="@+id/txt_fecha"
        android:text="@string/txt_pedido_precio"
        android:textColor="@color/white" />

</RelativeLayout>